# secret-vm-kms

./: .gitignore  Cargo.toml  LICENSE  Makefile  NOTICE  Readme.md  Tikhon - quote and collateral.txt
.github/workflows/: Integration.yml  Static.yml
kms-python-tests/: add_env_by_image.py  add_image_to_service.py  add_secret_key_by_image.py  create_service.py  get_env_by_image.py  get_secret_key.py  get_secret_key_by_image.py  get_services.py  remove_image.py
kms-python-tests/quote_and_collateral/: collateral.txt  quote.txt
kms-python-tests/test_image/: image.json
node/: execute.js  package-lock.json  package.json  query.js  upload.js
src/: amd_attest.rs  contract.rs  crypto.rs  error.rs  import_helpers.rs  lib.rs  memory.rs  msg.rs  state.rs  wasm_random.rs
tests/: collateral.txt  new.txt  quote.txt
