[package]
name = "key-management-system-contract"
version = "0.1.0"
authors = ["Tykhon <tykhon@scrtlabs.com"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.10", features = ["random"]}
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.0.0" }
getrandom = {version = "0.2.15", features = ["js"] }
schemars = { version = "0.8.11" }
serde = { version = "1.0" }
thiserror = { version = "2.0.3" }
cosmwasm-schema = "2.1.4"
sha2 = "0.10.8"
hex = "0.4.3"
serde_json = "1.0.138"
aes-siv = { version = "0.6.2", default-features = false, features = [
    "alloc",
    "std"
] }
x25519-dalek = { version = "=2.0.0-rc.3", default-features = false, features = [
    "static_secrets"
] }
log = "0.4.25"
#enclave_crypto = { git = "https://github.com/scrtlabs/SecretNetwork.git", branch = "mrenclave3", version = "1.11.0"}

# Uncomment these for some common extra tools
# secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", tag = "v0.8.0" }
# cw-storage-plus = { version = "1.0.1", default-features = false }

# [patch.crates-io]
# uncomment this if you use cw-storage-plus
# cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }

[[bin]]
name = "schema"
required-features = ["schema"]
