[package]
name = "key-management-system-contract"
version = "0.1.0"
authors = ["Tykhon <tykhon@scrtlabs.com"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
schema = ["cosmwasm-schema"]

[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11" , features = ["stargate","random"]}
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11" }
schemars = { version = "0.8.11" }
secret-toolkit = { version = "0.10.0", default-features = false, features = ["utils", "storage", "serialization", "viewing-key", "permit"] }
serde = { version = "1.0" }
thiserror = { version = "2.0.3" }
cosmwasm-schema = { version = "1.1.0", optional = true }
sha2 = "0.10.8"
hex = "0.4.3"
serde-json-wasm = "1.0.0"
aes-siv = "0.6.2"
x25519-dalek = { version = "=1.2.0", default-features = false, features = [
    "u64_backend"
] }
log = "0.4.25"
cc = { version = "=1.1.10" }
serde_json = "1.0.138"
#enclave_crypto = { git = "https://github.com/scrtlabs/SecretNetwork.git", branch = "mrenclave3", version = "1.11.0"}

# Uncomment these for some common extra tools
# secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", tag = "v0.8.0" }
# cw-storage-plus = { version = "1.0.1", default-features = false }

# [patch.crates-io]
# uncomment this if you use cw-storage-plus
# cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret" }

[[bin]]
name = "schema"
required-features = ["schema"]
